refactor test for guillaume